# codex-helper

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  README_EN.md  dist-workspace.toml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: error.rs  lib.rs  lifecycle.rs  main.rs
apps/desktop/src-tauri/src/commands/: admin_api.rs  app.rs  control.rs  mod.rs  paths.rs  providers.rs
crates/core/: Cargo.toml
crates/core/src/: auth_resolution.rs  balance.rs  basellm_catalog.rs  basellm_metadata.rs  client_config.rs  codex_auth_facade.rs  codex_capability_profile.rs  codex_client_patch.rs  codex_integration.rs  codex_models_cache.rs  codex_onboarding.rs  codex_patch_plan.rs  codex_switch.rs  config.rs  config_auth_sync.rs  config_bootstrap.rs  config_legacy_json.rs  config_profiles.rs  config_retry.rs  config_routing.rs  config_storage.rs  config_v2.rs  config_v3.rs  config_v4.rs  control_plane_client.rs  doctor.rs  endpoint_health.rs  file_replace.rs  healthcheck.rs  helper_config.rs  host_local.rs  lb.rs  lib.rs  local_log_store.rs  local_operator.rs  logging.rs  model_routing.rs  notify.rs  path_identity.rs  pricing.rs  (+27 more)
crates/core/src/config/tests/: basic.rs  canonical_schema.rs  client_patch_contract.rs  current_v5_contract.rs  current_v6_contract.rs  io_bootstrap.rs  legacy_v5_migration_contract.rs  mod.rs  retry_profiles.rs  route_graph_ops.rs  storage_migration.rs  v2_schema.rs  v3_schema.rs  v4_schema.rs
crates/core/src/credentials/: capabilities.rs  generation.rs  installation_identity.rs  mod.rs  model.rs  runtime.rs  secret_file.rs  tests.rs
crates/core/src/credentials/native/: linux.rs  macos.rs  mod.rs  windows.rs
crates/core/src/dashboard_core/: config_options.rs  mod.rs  operator_options.rs  operator_summary.rs  routing_posture.rs  snapshot.rs  station_options.rs  types.rs  window_stats.rs
crates/core/src/fleet/: merge.rs  mod.rs  model.rs  observer.rs  poller.rs  process_scan.rs  registry.rs
crates/core/src/logging/: control_trace.rs  tests.rs
crates/core/src/policy_actions/: mod.rs  model.rs
crates/core/src/provider_signals/: mod.rs  model.rs
crates/core/src/proxy/: admin.rs  admin_api_error.rs  api_responses.rs  attempt_execution.rs  attempt_failures.rs  attempt_health.rs  attempt_request.rs  attempt_response.rs  attempt_selection.rs  attempt_target.rs  attempt_transport.rs  auth_resolution.rs  classify.rs  client_identity.rs  codex_failure.rs  codex_failure_sse.rs  codex_relay_capabilities.rs  codex_relay_evidence.rs  codex_relay_live_smoke.rs  codex_relay_probe.rs  codex_relay_target.rs  concurrency_limits.rs  control_plane.rs  control_plane_manifest.rs  control_plane_routes.rs  control_plane_service.rs  entrypoint.rs  failure_summary.rs  headers.rs  healthcheck_api.rs  http_debug.rs  local_operator_routes.rs  mod.rs  models_compat.rs  openai_images.rs  passive_health.rs  persisted_config_api.rs  persisted_registry_api.rs  profile_defaults.rs  provider_evidence.rs  (+41 more)
crates/core/src/proxy/codex_relay_live_smoke/: cases.rs
crates/core/src/proxy/control_plane/: capabilities.rs  codex_capabilities.rs  codex_live_smoke.rs  fleet.rs  operator_read_model.rs  session_mutations.rs  session_observability.rs
crates/core/src/proxy/control_plane_routes/: capability_session.rs  healthchecks.rs  mod.rs  overrides.rs  profiles.rs  providers.rs  routing.rs  stations.rs  status_runtime.rs
crates/core/src/proxy/tests/: api_admin.rs  crash_recovery.rs  failover.rs  harness.rs  http_debug.rs  mod.rs  openai_images_generation.rs  routing_profiles.rs
crates/core/src/runtime_store/: affinity.rs  lifecycle.rs  metadata.rs  policy.rs
crates/core/src/sessions/: stats_cache.rs  tests.rs  transcript.rs
crates/core/src/state/: attribution_index.rs  policy_action_store.rs  quota_identity_store.rs  quota_sample_store.rs  routing_control.rs  runtime_types.rs  session_affinity_control.rs  session_identity.rs  session_route_ledger.rs
crates/core/tests/: pricing_tier_regression.rs
crates/core/tests/fixtures/: usage-providers-v0.20.3.json
crates/core/tests/fixtures/pricing/: gpt-5.6-sol-audit.json
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs
crates/gui/src/gui/: app.rs  config.rs  i18n.rs  proxy_control.rs  single_instance.rs  tray.rs  util.rs
crates/gui/src/gui/pages/: config_document.rs  config_legacy.rs  config_raw.rs  config_shell.rs  config_v2.rs  config_v2_header.rs  doctor.rs  formatting.rs  history.rs  history_all_by_date.rs  history_all_by_date_loader.rs  history_all_by_date_transcript.rs  history_all_by_date_view.rs  history_controller.rs  history_controller_filter.rs  history_controller_refresh.rs  history_external.rs  history_git.rs  history_main_view.rs  history_observed.rs  history_observed_card_summary.rs  history_observed_placeholder.rs  history_observed_request_summary.rs  history_observed_runtime.rs  history_observed_summary.rs  history_page.rs  history_state.rs  history_tests.rs  history_toolbar.rs  history_toolbar_all_by_date.rs  history_toolbar_controls.rs  history_toolbar_header.rs  history_toolbar_recent.rs  history_toolbar_shortcuts.rs  history_tools.rs  history_transcript_runtime.rs  mod.rs  navigation.rs  overview.rs  overview_connection.rs  (+107 more)
crates/gui/src/gui/proxy_control/: attached_discovery.rs  attached_refresh.rs  background_refresh.rs  control_mutations.rs  provider_balance_refresh.rs  running_refresh.rs  runtime_lifecycle.rs  runtime_operations.rs  tests.rs  types.rs
crates/server/: Cargo.toml
crates/server/src/: check.rs  config.rs  main.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
crates/tui/src/tui/: attached.rs  codex_relay_diagnostics.rs  codex_relay_live_smoke.rs  fleet_refresh.rs  i18n.rs  input.rs  local_session_enrichment.rs  mod.rs  model.rs  operator_actions.rs  operator_projection.rs  report.rs  runtime_refresh.rs  session_refresh.rs  settings_relay.rs  snapshot_refresh.rs  state.rs  terminal.rs  types.rs  view.rs
crates/tui/src/tui/input/: balance.rs  health.rs  history_bridge.rs  (+8 more)
(+600 files in other folders)
