[package]
name = "codex-helper"
version = "0.20.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
description = "A Rust-based local helper / proxy for Codex CLI traffic with multi-provider routing, usage-aware switching, filtering, and session helpers."
readme = "README_EN.md"
keywords = ["codex", "proxy", "cli", "ai"]
categories = ["command-line-utilities", "development-tools", "asynchronous"]
repository = "https://github.com/Latias94/codex-helper"
homepage = "https://github.com/Latias94/codex-helper"

[workspace]
members = [
    "crates/core",
    "crates/tui",
    "crates/server",
    "apps/desktop/src-tauri",
]
default-members = ["."]

[[bin]]
name = "codex-helper"
path = "src/main.rs"

[[bin]]
name = "ch"
path = "src/bin/ch.rs"

[dependencies]
codex-helper-core = { path = "crates/core", version = "0.20.0" }
codex-helper-tui = { path = "crates/tui", version = "0.20.0" }
anyhow = "1.0.103"
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "fs", "process"] }
axum = { version = "0.8.9", features = ["http2", "macros", "ws"] }
hyper = { version = "1.10.1", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json", "stream", "gzip", "brotli", "zstd", "deflate"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
thiserror = "2.0.18"
dirs = "6.0.0"
uuid = { version = "1.23.4", features = ["v4"] }
futures-util = "0.3.32"
clap = { version = "4.6.1", features = ["derive"] }
regex = "1.12.4"
atty = "0.2.14"
owo-colors = "4.3.0"
humantime = "2.4.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }

[dev-dependencies]
pretty_assertions = "1.4.1"

[package.metadata.binstall]
# `cargo-binstall` provides `{ repo }` as a full URL (e.g. https://github.com/OWNER/REPO),
# and our cargo-dist release assets are named like `{ name }-{ target }.tar.xz` under the `v{ version }` tag,
# with binaries located under the top-level directory `{ name }-{ target }/`.
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.xz"
pkg-fmt = "txz"
bin-dir = "{ name }-{ target }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.dist]
dist = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
