[package]
name = "codex-helper-core"
version = "0.15.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Core library for codex-helper."
repository = "https://github.com/Latias94/codex-helper"

[features]
# UI-specific helper APIs (used by the GUI crate).
gui = []

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
toml_edit = "0.20.2"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "fs"] }
axum = { version = "0.8.9", features = ["http2", "macros", "ws"] }
hyper = { version = "1.9.0", features = ["full"] }
reqwest = { version = "0.13.3", features = ["json", "stream", "gzip", "brotli", "zstd", "deflate"] }
brotli = "8.0.2"
flate2 = "1.1.9"
zstd = "0.13.3"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
thiserror = "2.0.17"
dirs = "6.0.0"
uuid = { version = "1.23.1", features = ["v4"] }
rand = "0.9.2"
futures-util = "0.3.31"
regex = "1.12.3"
owo-colors = "4.2.3"
humantime = "2.1.0"
atty = "0.2.14"
rusqlite = { version = "0.39.0", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
tower = { version = "0.5.2", features = ["util"] }
