[package]
name = "codex-helper-core"
version = "0.20.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Core library for codex-helper."
repository = "https://github.com/Latias94/codex-helper"

[dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1"
toml_edit = "0.25.12"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "fs", "time"] }
axum = { version = "0.8.9", features = ["http2", "macros", "ws"] }
hyper = { version = "1.10.1", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.13.4", features = ["json", "stream", "gzip", "brotli", "zstd", "deflate"] }
brotli = "8.0.4"
chrono = "0.4.45"
flate2 = "1.1.9"
zstd = "0.13.3"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
thiserror = "2.0.18"
dirs = "6.0.0"
uuid = { version = "1.23.4", features = ["v4"] }
rand = "0.10.2"
futures-util = "0.3.32"
regex = "1.12.4"
owo-colors = "4.3.0"
humantime = "2.4.0"
httpdate = "1.0.3"
atty = "0.2.14"
rusqlite = { version = "0.40.1", features = ["bundled"] }
sysinfo = "0.39.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
tower = { version = "0.5.3", features = ["util"] }
