[package]
name = "codex-helper-core"
version = "0.21.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Core library for codex-helper."
repository = "https://github.com/Latias94/codex-helper"

[features]
default = []
native-credentials = [
    "dep:apple-native-keyring-store",
    "dep:keyring-core",
    "dep:secret-service",
    "dep:security-framework",
    "dep:windows-native-keyring-store",
    "dep:zbus",
]

[dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
hmac = "0.12.1"
sha2 = "0.10.9"
toml = "1.1"
toml_edit = "0.25.12"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "fs", "time", "test-util", "io-util"] }
axum = { version = "0.8.9", features = ["http2", "macros", "ws"] }
hyper = { version = "1.10.1", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.13.4", features = ["json", "stream", "gzip", "brotli", "zstd", "deflate"] }
brotli = "8.0.4"
chrono = "0.4.45"
chrono-tz = "0.10.4"
flate2 = "1.1.9"
zstd = "0.13.3"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
thiserror = "2.0.18"
dirs = "6.0.0"
uuid = { version = "1.23.4", features = ["v4"] }
rand = "0.10.2"
futures-util = "0.3.32"
regex = "1.12.4"
owo-colors = "4.3.0"
humantime = "2.4.0"
httpdate = "1.0.3"
http = "1.4.0"
atty = "0.2.14"
rusqlite = { version = "0.40.1", features = ["bundled"] }
sysinfo = "0.39.5"
tempfile = "3.27.0"
zeroize = "1.9.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[target.'cfg(any(target_os = "macos", windows))'.dependencies]
keyring-core = { version = "1.0.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.1", default-features = false, features = ["keychain"], optional = true }
security-framework = { version = "3.7.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "5.1.0", default-features = false, features = ["rt-tokio-crypto-rust"], optional = true }
zbus = { version = "5.16.0", default-features = false, optional = true }

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1.11"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Threading", "Win32_Security", "Win32_Security_Authorization"] }
windows-native-keyring-store = { version = "1.1.0", default-features = false, optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
static_assertions = "1.1.0"
tower = { version = "0.5.3", features = ["util"] }
tokio-rustls = "0.26.4"
