[package]
name = "codex-helper-gui"
version = "0.12.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
codex-helper-core = { path = "../core", features = ["gui"] }
eframe = "0.33.3"
tray-icon = "0.21.3"
fontdb = "0.16.2"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "fs"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8"
serde_json = "1.0.145"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2.3"
axum = { version = "0.8.7", features = ["http2", "macros", "ws"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }
