[package]
name = "codex-helper-gui"
version = "0.14.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Desktop GUI crate for codex-helper."
repository = "https://github.com/Latias94/codex-helper"

[dependencies]
anyhow = "1.0.102"
codex-helper-core = { path = "../core", version = "0.14.0", features = ["gui"] }
eframe = "0.33.3"
tray-icon = "0.21.3"
fontdb = "0.16.2"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal", "fs"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8"
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
futures-util = "0.3.31"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.4"
axum = { version = "0.8.8", features = ["http2", "macros", "ws"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }
