[package]
name = "codex-helper-server"
version = "0.20.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Container-oriented server runtime for codex-helper central relay deployments."
repository = "https://github.com/Latias94/codex-helper"

[[bin]]
name = "codex-helper-server"
path = "src/main.rs"

[dependencies]
codex-helper-core = { path = "../core", version = "0.20.3" }
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal"] }
toml = "1.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.27.0"
