[package]
name = "codex-helper-tui"
version = "0.15.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Terminal UI crate for codex-helper."
repository = "https://github.com/Latias94/codex-helper"

[dependencies]
codex-helper-core = { path = "../core", version = "0.15.0" }
anyhow = "1.0.102"
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
unicode-width = "0.2"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal", "fs"] }
futures-util = "0.3.31"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
