[package]
name = "codex-helper-desktop"
version = "0.16.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
description = "Tauri desktop client for codex-helper."

[lib]
name = "codex_helper_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
codex-helper-core = { path = "../../../crates/core", version = "0.16.0" }
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.4"
thiserror = "2.0.17"
