[package]
name = "codex-helper-desktop"
version = "0.20.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
description = "Tauri desktop client for codex-helper."

[package.metadata.dist]
dist = false

[lib]
name = "codex_helper_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
codex-helper-core = { path = "../../../crates/core", version = "0.20.0" }
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.5", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-single-instance = "2.4.2"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["time"] }
toml = "1.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
